fix(contrib/ec2): use shared user-data
Previously, contrib/ec2 used its own stripped-down user-data file.
We have customizations in contrib/coreos/user-data, and we want all
providers using the same user-data file.

To do this, we introduce a Python script which will dynamically generate
the appropriate JSON payload from contrib/coreos/user-data when running
the provision-ec2-cluster script. While ideally this would be achieved without
requiring an external scripting language, this is very easy to achieve in Python,
and we already require Python as a dependency (since the AWS CLI is a Python package).

Also, have EC2 respect DEIS_NUM_INSTANCES like every other provider does.

closes #858, #826

--- a/contrib/ec2/deis.template
+++ b/contrib/ec2/deis.template
@@ -44,16 +44,6 @@
       "Description": "Number of nodes in cluster (3-12).",
       "Type": "Number"
     },
-    "DiscoveryURL": {
-      "Description": "An unique etcd cluster discovery URL. Grab a new token from https://discovery.etcd.io/new",
-      "Type": "String"
-    },
-    "AdvertisedIPAddress": {
-      "Description": "Use 'private' if your etcd cluster is within one region or 'public' if it spans regions or cloud providers.",
-      "Default": "private",
-      "AllowedValues": ["private", "public"],
-      "Type": "String"
-    },
     "AllowSSHFrom": {
       "Description": "The net block (CIDR) that SSH is available to.",
       "Default": "0.0.0.0/0",
@@ -169,21 +159,7 @@
         "InstanceType": {"Ref": "InstanceType"},
         "KeyName": {"Ref": "KeyPair"},
         "SecurityGroups": [{"Ref": "CoreOSSecurityGroup"}, {"Ref": "DeisSecurityGroup"}],
-        "UserData" : { "Fn::Base64":
-          { "Fn::Join": [ "", [
-            "#cloud-config\n\n",
-            "coreos:\n",
-            "  etcd:\n",
-            "    discovery: ", { "Ref": "DiscoveryURL" }, "\n",
-            "    addr: $", { "Ref": "AdvertisedIPAddress" }, "_ipv4:4001\n",
-            "    peer-addr: $", { "Ref": "AdvertisedIPAddress" }, "_ipv4:7001\n",
-            "  units:\n",
-            "    - name: etcd.service\n",
-            "      command: start\n",
-            "    - name: fleet.service\n",
-            "      command: start\n"
-            ] ]
-          }
+        "UserData" : { "Fn::Base64": { "Fn::Join": [ "", [ ] ] }
         }
       }
     }
