refactor(systemd): clean up paths
harcoded paths are not required in shell environments. I've also
removed unnecessary uses of /bin/sh when we only require an
environment variable, since systemd can reference environment
variables through ${}.

ref: http://www.freedesktop.org/software/systemd/man/systemd.service.html#ExecStart=

--- a/logger/systemd/deis-logger.service
+++ b/logger/systemd/deis-logger.service
@@ -4,10 +4,10 @@ Description=deis-logger
 [Service]
 EnvironmentFile=/etc/environment
 TimeoutStartSec=20m
-ExecStartPre=/bin/sh -c "/usr/bin/docker history deis/logger >/dev/null || /usr/bin/docker pull deis/logger"
-ExecStartPre=/bin/sh -c "/usr/bin/docker inspect deis-logger >/dev/null && /usr/bin/docker rm -f deis-logger || true"
-ExecStartPre=/bin/sh -c "/usr/bin/docker start deis-logger-data || /usr/bin/docker run --name deis-logger-data -v /var/log/deis deis/base /bin/true"
-ExecStart=/bin/sh -c "docker run --name deis-logger -p 514:514/udp -e PUBLISH=514 -e HOST=$COREOS_PRIVATE_IPV4 --volumes-from deis-logger-data deis/logger"
+ExecStartPre=/bin/sh -c "docker history deis/logger >/dev/null || docker pull deis/logger"
+ExecStartPre=/bin/sh -c "docker inspect deis-logger >/dev/null && docker rm -f deis-logger || true"
+ExecStartPre=/bin/sh -c "docker start deis-logger-data || docker run --name deis-logger-data -v /var/log/deis deis/base true"
+ExecStart=/usr/bin/docker run --name deis-logger -p 514:514/udp -e PUBLISH=514 -e HOST=${COREOS_PRIVATE_IPV4} --volumes-from deis-logger-data deis/logger
 ExecStop=/usr/bin/docker rm -f deis-logger
 
 [Install]
