--- a/test/Rakefile
+++ b/test/Rakefile
@@ -5,7 +5,8 @@ require 'rainbow/ext/string'
 
 AUTH_KEY = ENV['DEIS_TEST_KEY'] || '~/.ssh/deis'
 SSH_KEY = ENV['DEIS_TEST_SSH_KEY'] || '~/.vagrant.d/insecure_private_key'
-HOST = ENV['DEIS_TEST_HOST'] || 'local.deisapp.com'
+HOSTS = ENV['DEIS_TEST_HOSTS'] || '172.17.8.100'
+HOSTNAME = ENV['DEIS_TEST_HOSTNAME'] || 'local.deisapp.com'
 EXAMPLE_APP = ENV['DEIS_TEST_APP'] || 'example-ruby-sinatra'
 
 namespace :setup do
@@ -21,16 +22,16 @@ end
 namespace :tests do
   task :all => ['register','login','add_key','create_cluster','create_app','push_app','scale_app','verify_app']
   task :register do
-    run_command("deis register http://#{HOST}:8000 --username=test --email=test@test.co.nz --password=asdf1234")
+    run_command("deis register http://#{HOSTNAME}:8000 --username=test --email=test@test.co.nz --password=asdf1234")
   end
   task :login do
-    run_command("deis login http://#{HOST}:8000 --username=test --password=asdf1234")
+    run_command("deis login http://#{HOSTNAME}:8000 --username=test --password=asdf1234")
   end
   task :add_key do
     run_command("deis keys:add #{AUTH_KEY}.pub")
   end
   task :create_cluster do
-    run_command("deis init dev #{HOST} --hosts=#{HOST} --auth=#{SSH_KEY}")
+    run_command("deis init dev #{HOSTNAME} --hosts=#{HOSTS} --auth=#{SSH_KEY}")
   end
   task :create_app do
     run_command("cd #{EXAMPLE_APP} && deis apps:create testing")
@@ -42,7 +43,7 @@ namespace :tests do
     run_command("cd #{EXAMPLE_APP} && deis scale web=2")
   end
   task :verify_app do
-    run_command("curl -s http://testing.#{HOST} | grep -q 'Powered by Deis'")
+    run_command("curl -s http://testing.#{HOSTNAME} | grep -q 'Powered by Deis'")
   end
 end
 
