--- a/database/systemd/deis-database.service
+++ b/database/systemd/deis-database.service
@@ -7,8 +7,7 @@ TimeoutStartSec=20m
 ExecStartPre=/bin/sh -c "docker history deis/database >/dev/null || docker pull deis/database:latest"
 ExecStartPre=/bin/sh -c "docker inspect deis-database >/dev/null && docker rm -f deis-database || true"
 ExecStartPre=/bin/sh -c "docker inspect deis-database-data >/dev/null 2>&1 || docker run --name deis-database-data -v /var/lib/postgresql deis/base true"
-ExecStart=/usr/bin/docker run --name deis-database -p 5432:5432 -e PUBLISH=5432 -e HOST=${COREOS_PRIVATE_IPV4} --volumes-from deis-database-data deis/database
-ExecStop=/usr/bin/docker rm -f deis-database
+ExecStart=/usr/bin/docker run --name deis-database --rm -p 5432:5432 -e PUBLISH=5432 -e HOST=${COREOS_PRIVATE_IPV4} --volumes-from deis-database-data deis/database
 
 [Install]
 WantedBy=multi-user.target
