fix(systemd units): Fix docker containers being orphaned
Docker seems to orphan our containers after the fix in 6b452e,
this reverts part of it and properly signals the docker containers to
stop. Given that we run them with `--rm`, this also makes the ephemeral
containers destroy their data off of the drives. The data containers are
not affected by this and they persist.

--- a/builder/systemd/deis-builder.service
+++ b/builder/systemd/deis-builder.service
@@ -10,6 +10,7 @@ ExecStartPre=/bin/sh -c "IMAGE=`/run/deis/bin/get_image /deis/builder`; docker h
 ExecStartPre=/bin/sh -c "docker inspect deis-builder >/dev/null && docker rm -f deis-builder || true"
 ExecStart=/bin/sh -c "IMAGE=`/run/deis/bin/get_image /deis/builder` && docker run --name deis-builder --rm -p 2223:22 -e PUBLISH=22 -e HOST=$COREOS_PRIVATE_IPV4 -e PORT=2223 --volumes-from deis-builder-data --privileged $IMAGE"
 ExecStartPost=/bin/sh -c "echo 'Waiting for builder on 2223/tcp...' && until cat </dev/null>/dev/tcp/$COREOS_PRIVATE_IPV4/2223; do sleep 1; done"
+ExecStopPost=/usr/bin/docker stop deis-builder
 
 [Install]
 WantedBy=multi-user.target
