--- a/registry/Dockerfile
+++ b/registry/Dockerfile
@@ -13,11 +13,10 @@ RUN wget -qO- https://raw.githubusercontent.com/pypa/pip/1.5.5/contrib/get-pip.p
 RUN useradd -s /bin/bash registry
 
 # add the docker registry source from github
-RUN git clone https://github.com/deis/docker-registry /docker-registry
-RUN chown -R registry:registry /docker-registry
-
-# lock the registry version to a tag
-RUN cd /docker-registry && git checkout repository-import
+RUN git clone https://github.com/deis/docker-registry /docker-registry && \
+    cd /docker-registry && \
+    git checkout fc3b691 && \
+    chown -R registry:registry /docker-registry
 
 # install boto configuration
 RUN cp /docker-registry/config/boto.cfg /etc/boto.cfg
