docs(gce): instructions for running Deis in Google Compute Engine
Adding instructions and script for running on Google Compute Engine. This changes existing CoreOS user-data to set permissions as strings instead of integers. PyYAML interperets integers preceded by 0 to be octal. 0755 would become 493 when converted.

closes #1036

--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,6 @@ Vagrantfile.local
 
 # EC2 CloudFormation Setup
 contrib/ec2/cloudformation.json
+
+# GCE generated user-data
+contrib/gce/gce-user-data
