--- a/router/conf.d/nginx.conf.toml
+++ b/router/conf.d/nginx.conf.toml
@@ -11,5 +11,5 @@ keys = [
   "/deis/controller",
   "/deis/builder",
 ]
-check_cmd  = "/usr/sbin/nginx -t -c {{ .src }}"
+check_cmd  = "/app/bin/check {{ .src }}"
 reload_cmd = "/usr/sbin/nginx -s reload"
