--- a/router/templates/nginx.conf
+++ b/router/templates/nginx.conf
@@ -57,9 +57,9 @@ http {
             proxy_set_header            Host $host;
             proxy_set_header            X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_redirect              off;
-            proxy_connect_timeout       10s;
-            proxy_send_timeout          1200s;
-            proxy_read_timeout          1200s;
+            proxy_connect_timeout       {{ or (.deis_router_controller_timeout_connect) "10s" }};
+            proxy_send_timeout          {{ or (.deis_router_controller_timeout_send) "20m" }};
+            proxy_read_timeout          {{ or (.deis_router_controller_timeout_read) "20m" }};
 
             proxy_pass                  http://deis-controller;
         }
@@ -117,12 +117,12 @@ http {
 tcp {
     access_log /dev/stdout;
     tcp_nodelay on;
-    timeout 1200000;
+    timeout {{ or (.deis_router_builder_timeout_tcp) "1200000" }};
 
     # same directive names, but these are in miliseconds...
-    proxy_connect_timeout       10000;
-    proxy_send_timeout          1200000;
-    proxy_read_timeout          1200000;
+    proxy_connect_timeout       {{ or (.deis_router_builder_timeout_connect) "10000" }};
+    proxy_send_timeout          {{ or (.deis_router_builder_timeout_send) "1200000" }};
+    proxy_read_timeout          {{ or (.deis_router_builder_timeout_read) "1200000" }};
 
     upstream builder {
         server {{ .deis_builder_host }}:{{ .deis_builder_port }};
