--- a/builder/Makefile
+++ b/builder/Makefile
@@ -40,4 +40,5 @@ test-unit:
 	@echo no unit tests
 
 test-functional:
+	@docker history deis/test-etcd >/dev/null 2>&1 || docker pull deis/test-etcd
 	GOPATH=$(CURDIR)/../tests/_vendor:$(GOPATH) go test -v -timeout 30m ./tests/...
