--- a/builder/systemd/deis-builder-data.service.template
+++ b/builder/systemd/deis-builder-data.service.template
@@ -10,4 +10,4 @@ ExecStart=/bin/sh -c "docker inspect deis-builder-data >/dev/null 2>&1 || docker
 WantedBy=multi-user.target
 
 [X-Fleet]
-X-ConditionMachineID=CHANGEME
+MachineID=CHANGEME
