--- a/database/systemd/deis-database-data.service.template
+++ b/database/systemd/deis-database-data.service.template
@@ -10,4 +10,4 @@ ExecStart=/bin/sh -c "docker inspect deis-database-data >/dev/null 2>&1 || docke
 WantedBy=multi-user.target
 
 [X-Fleet]
-X-ConditionMachineID=CHANGEME
+MachineID=CHANGEME
