--- a/logger/systemd/deis-logger-data.service.template
+++ b/logger/systemd/deis-logger-data.service.template
@@ -10,4 +10,4 @@ ExecStart=/bin/sh -c "docker inspect deis-logger-data >/dev/null 2>&1 || docker 
 WantedBy=multi-user.target
 
 [X-Fleet]
-X-ConditionMachineID=CHANGEME
+MachineID=CHANGEME
