--- a/logger/Makefile
+++ b/logger/Makefile
@@ -52,8 +52,8 @@ test-unit: test-style
 	go test -v -cover ./syslog
 
 test-functional:
-	@docker history deis/test-etcd >/dev/null 2>&1 || docker pull deis/test-etcd
-	GOPATH=$(CURDIR)/../tests/_vendor:$(GOPATH) go test -v -timeout 20m ./tests/...
+	@docker history deis/test-etcd >/dev/null 2>&1 || docker pull deis/test-etcd:latest
+	GOPATH=$(CURDIR)/../tests/_vendor:$(GOPATH) go test -v ./tests/...
 
 coverage:
 	go test -coverprofile coverage.out ./syslog
